apply fixes